    from nesting beyond 3 levels.  Demonstrated on Shangrila.  Fixed by
    Brazil.
 -- Fixed '@wait obj/attr=...' form of semaphores.  It would work
    exactly once if 'attr' wasn't previously defined in the game.
    Caused by and fixed by Brazil.  Reported by Ian.
 -- regmatch() wasn't handling the full range of return codes from PCRE
    properly.  PCRE contributed by Raevnos.  Fixed by Brazil.
 -- Fix hang in @dbck when orphaned objects lose both their home and
    their current location.  This crashing bug was probably introduced
    inadvertantly by Jake when he changed the defintion of a good object.
    Fixed by Brazil.
 -- Give detailed message at the welcome screen about why a password
    doesn't meet with the requirements of the safer_password
    configuration option.
 -- Fixed obscure buffer overflow in wRAP().
 -- Fixed buffer overflow in @list functions.
 -- Fixed permission issue with visual attributes on objects which are
    not nearby.
 -- Fixed @mail/bcc behavior so that bcc'ed recipients are hidden from
    non-bcc'ed recipients.
 -- Removed '%' as a valid attribute name character.
 -- Fixed MEMORY_BASED build.


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Jake sorted the mudconf structures first by type and then by name.
 -- Raevnos updated PCRE.  The updated version does not require
    Raevnos' fix (implemented with C++ exceptions). With this release,
    MUX 2.3 no longer depends on C++ exceptions.


Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Alierak fix for typos in NOTES.
 -- Spell 'separate' correctly in the help files and the source code.
 -- Improved grammer of the emit the sender sees from the page command.


Miscellaneous:
~~~~~~~~~~~~~
 -- Switched all internal use of BOOL type to bool type.
 -- Documented flag attributes.
 -- Updated CONVERSION.
 -- Remove vestigial code related to old-style variable function
    arguments and autoconf.h.in clean up in general.